# opensuit

./: .gitignore  README.md  pyproject.toml
platform/backend/: pyproject.toml
platform/backend/src/opensuit/: __main__.py  app.py
platform/frontend/: package-lock.json  package.json
platform/frontend/src/: App.tsx  index.css
src/opensuit/: __main__.py  agent.py  main.py  slack_app.py
